--- a/Langchain_With_Gemini_And_Build_RAG.ipynb
+++ b/Langchain_With_Gemini_And_Build_RAG.ipynb
@@ -62,7 +62,7 @@
       "source": [
         "import os\n",
         "userdata = {\n",
-        "    'GOOGLE_API_KEY': 'AIzaSyDxFOqvgvFY3xm4Ssm0eqrBSVx0HzbFIiA'\n",
+        "    'GOOGLE_API_KEY': '*********'\n",
         "}\n",
         "GOOGLE_API_KEY=userdata.get('GOOGLE_API_KEY')\n",
         "genai.configure(api_key=GOOGLE_API_KEY)"
